Proyecto/calc-sintaxis.output
Estado 14 conflictos: 1 desplazamiento/reducción
Estado 15 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: prog $end

    1 prog: main

    2 type: TYPE_BOOL
    3     | TYPE_INT
    4     | TYPE_VOID

    5 main: type ID '(' ')' '{' sentencias '}'

    6 sentencias: ε
    7           | sentencias asignacion retorno
    8           | sentencias declaracion retorno

    9 asignacion: ID ASIGNACION expr ';'
   10           | ID ASIGNACION exprBool ';'
   11           | type ID ASIGNACION exprBool ';'

   12 declaracion: TYPE_INT ID ';'
   13            | TYPE_BOOL ID ';'

   14 exprBool: BOOLEAN

   15 expr: INT
   16     | ID
   17     | expr '+' expr
   18     | expr '*' expr
   19     | expr TMENOS expr
   20     | '(' expr ')'

   21 retorno: ε
   22        | RETURN exprBool ';'
   23        | RETURN expr ';'
   24        | RETURN ';'


Terminales con las reglas donde aparecen

    $end (0) 0
    '(' (40) 5 20
    ')' (41) 5 20
    '*' (42) 18
    '+' (43) 17
    ';' (59) 9 10 11 12 13 22 23 24
    '{' (123) 5
    '}' (125) 5
    error (256)
    INT (258) 15
    ID (259) 5 9 10 11 12 13 16
    TMENOS (260) 19
    BOOLEAN (261) 14
    TYPE_INT (262) 3 12
    TYPE_BOOL (263) 2 13
    TYPE_VOID (264) 4
    ASIGNACION (265) 9 10 11
    RETURN (266) 22 23 24


No terminales con las reglas donde aparecen

    $accept (19)
        on left: 0
    prog (20)
        on left: 1
        on right: 0
    type (21)
        on left: 2 3 4
        on right: 5 11
    main (22)
        on left: 5
        on right: 1
    sentencias (23)
        on left: 6 7 8
        on right: 5 7 8
    asignacion (24)
        on left: 9 10 11
        on right: 7
    declaracion (25)
        on left: 12 13
        on right: 8
    exprBool (26)
        on left: 14
        on right: 10 11 22
    expr (27)
        on left: 15 16 17 18 19 20
        on right: 9 17 18 19 20 23
    retorno (28)
        on left: 21 22 23 24
        on right: 7 8


Estado 0

    0 $accept: • prog $end

    TYPE_INT   desplazar e ir al estado 1
    TYPE_BOOL  desplazar e ir al estado 2
    TYPE_VOID  desplazar e ir al estado 3

    prog  ir al estado 4
    type  ir al estado 5
    main  ir al estado 6


Estado 1

    3 type: TYPE_INT •

    $default  reduce usando la regla 3 (type)


Estado 2

    2 type: TYPE_BOOL •

    $default  reduce usando la regla 2 (type)


Estado 3

    4 type: TYPE_VOID •

    $default  reduce usando la regla 4 (type)


Estado 4

    0 $accept: prog • $end

    $end  desplazar e ir al estado 7


Estado 5

    5 main: type • ID '(' ')' '{' sentencias '}'

    ID  desplazar e ir al estado 8


Estado 6

    1 prog: main •

    $default  reduce usando la regla 1 (prog)


Estado 7

    0 $accept: prog $end •

    $default  aceptar


Estado 8

    5 main: type ID • '(' ')' '{' sentencias '}'

    '('  desplazar e ir al estado 9


Estado 9

    5 main: type ID '(' • ')' '{' sentencias '}'

    ')'  desplazar e ir al estado 10


Estado 10

    5 main: type ID '(' ')' • '{' sentencias '}'

    '{'  desplazar e ir al estado 11


Estado 11

    5 main: type ID '(' ')' '{' • sentencias '}'

    $default  reduce usando la regla 6 (sentencias)

    sentencias  ir al estado 12


Estado 12

    5 main: type ID '(' ')' '{' sentencias • '}'
    7 sentencias: sentencias • asignacion retorno
    8           | sentencias • declaracion retorno

    ID         desplazar e ir al estado 13
    TYPE_INT   desplazar e ir al estado 14
    TYPE_BOOL  desplazar e ir al estado 15
    TYPE_VOID  desplazar e ir al estado 3
    '}'        desplazar e ir al estado 16

    type         ir al estado 17
    asignacion   ir al estado 18
    declaracion  ir al estado 19


Estado 13

    9 asignacion: ID • ASIGNACION expr ';'
   10           | ID • ASIGNACION exprBool ';'

    ASIGNACION  desplazar e ir al estado 20


Estado 14

    3 type: TYPE_INT •
   12 declaracion: TYPE_INT • ID ';'

    ID  desplazar e ir al estado 21

    ID  [reduce usando la regla 3 (type)]


Estado 15

    2 type: TYPE_BOOL •
   13 declaracion: TYPE_BOOL • ID ';'

    ID  desplazar e ir al estado 22

    ID  [reduce usando la regla 2 (type)]


Estado 16

    5 main: type ID '(' ')' '{' sentencias '}' •

    $default  reduce usando la regla 5 (main)


Estado 17

   11 asignacion: type • ID ASIGNACION exprBool ';'

    ID  desplazar e ir al estado 23


Estado 18

    7 sentencias: sentencias asignacion • retorno

    RETURN  desplazar e ir al estado 24

    $default  reduce usando la regla 21 (retorno)

    retorno  ir al estado 25


Estado 19

    8 sentencias: sentencias declaracion • retorno

    RETURN  desplazar e ir al estado 24

    $default  reduce usando la regla 21 (retorno)

    retorno  ir al estado 26


Estado 20

    9 asignacion: ID ASIGNACION • expr ';'
   10           | ID ASIGNACION • exprBool ';'

    INT      desplazar e ir al estado 27
    ID       desplazar e ir al estado 28
    BOOLEAN  desplazar e ir al estado 29
    '('      desplazar e ir al estado 30

    exprBool  ir al estado 31
    expr      ir al estado 32


Estado 21

   12 declaracion: TYPE_INT ID • ';'

    ';'  desplazar e ir al estado 33


Estado 22

   13 declaracion: TYPE_BOOL ID • ';'

    ';'  desplazar e ir al estado 34


Estado 23

   11 asignacion: type ID • ASIGNACION exprBool ';'

    ASIGNACION  desplazar e ir al estado 35


Estado 24

   22 retorno: RETURN • exprBool ';'
   23        | RETURN • expr ';'
   24        | RETURN • ';'

    INT      desplazar e ir al estado 27
    ID       desplazar e ir al estado 28
    BOOLEAN  desplazar e ir al estado 29
    '('      desplazar e ir al estado 30
    ';'      desplazar e ir al estado 36

    exprBool  ir al estado 37
    expr      ir al estado 38


Estado 25

    7 sentencias: sentencias asignacion retorno •

    $default  reduce usando la regla 7 (sentencias)


Estado 26

    8 sentencias: sentencias declaracion retorno •

    $default  reduce usando la regla 8 (sentencias)


Estado 27

   15 expr: INT •

    $default  reduce usando la regla 15 (expr)


Estado 28

   16 expr: ID •

    $default  reduce usando la regla 16 (expr)


Estado 29

   14 exprBool: BOOLEAN •

    $default  reduce usando la regla 14 (exprBool)


Estado 30

   20 expr: '(' • expr ')'

    INT  desplazar e ir al estado 27
    ID   desplazar e ir al estado 28
    '('  desplazar e ir al estado 30

    expr  ir al estado 39


Estado 31

   10 asignacion: ID ASIGNACION exprBool • ';'

    ';'  desplazar e ir al estado 40


Estado 32

    9 asignacion: ID ASIGNACION expr • ';'
   17 expr: expr • '+' expr
   18     | expr • '*' expr
   19     | expr • TMENOS expr

    TMENOS  desplazar e ir al estado 41
    '+'     desplazar e ir al estado 42
    '*'     desplazar e ir al estado 43
    ';'     desplazar e ir al estado 44


Estado 33

   12 declaracion: TYPE_INT ID ';' •

    $default  reduce usando la regla 12 (declaracion)


Estado 34

   13 declaracion: TYPE_BOOL ID ';' •

    $default  reduce usando la regla 13 (declaracion)


Estado 35

   11 asignacion: type ID ASIGNACION • exprBool ';'

    BOOLEAN  desplazar e ir al estado 29

    exprBool  ir al estado 45


Estado 36

   24 retorno: RETURN ';' •

    $default  reduce usando la regla 24 (retorno)


Estado 37

   22 retorno: RETURN exprBool • ';'

    ';'  desplazar e ir al estado 46


Estado 38

   17 expr: expr • '+' expr
   18     | expr • '*' expr
   19     | expr • TMENOS expr
   23 retorno: RETURN expr • ';'

    TMENOS  desplazar e ir al estado 41
    '+'     desplazar e ir al estado 42
    '*'     desplazar e ir al estado 43
    ';'     desplazar e ir al estado 47


Estado 39

   17 expr: expr • '+' expr
   18     | expr • '*' expr
   19     | expr • TMENOS expr
   20     | '(' expr • ')'

    TMENOS  desplazar e ir al estado 41
    '+'     desplazar e ir al estado 42
    '*'     desplazar e ir al estado 43
    ')'     desplazar e ir al estado 48


Estado 40

   10 asignacion: ID ASIGNACION exprBool ';' •

    $default  reduce usando la regla 10 (asignacion)


Estado 41

   19 expr: expr TMENOS • expr

    INT  desplazar e ir al estado 27
    ID   desplazar e ir al estado 28
    '('  desplazar e ir al estado 30

    expr  ir al estado 49


Estado 42

   17 expr: expr '+' • expr

    INT  desplazar e ir al estado 27
    ID   desplazar e ir al estado 28
    '('  desplazar e ir al estado 30

    expr  ir al estado 50


Estado 43

   18 expr: expr '*' • expr

    INT  desplazar e ir al estado 27
    ID   desplazar e ir al estado 28
    '('  desplazar e ir al estado 30

    expr  ir al estado 51


Estado 44

    9 asignacion: ID ASIGNACION expr ';' •

    $default  reduce usando la regla 9 (asignacion)


Estado 45

   11 asignacion: type ID ASIGNACION exprBool • ';'

    ';'  desplazar e ir al estado 52


Estado 46

   22 retorno: RETURN exprBool ';' •

    $default  reduce usando la regla 22 (retorno)


Estado 47

   23 retorno: RETURN expr ';' •

    $default  reduce usando la regla 23 (retorno)


Estado 48

   20 expr: '(' expr ')' •

    $default  reduce usando la regla 20 (expr)


Estado 49

   17 expr: expr • '+' expr
   18     | expr • '*' expr
   19     | expr • TMENOS expr
   19     | expr TMENOS expr •

    '*'  desplazar e ir al estado 43

    $default  reduce usando la regla 19 (expr)


Estado 50

   17 expr: expr • '+' expr
   17     | expr '+' expr •
   18     | expr • '*' expr
   19     | expr • TMENOS expr

    '*'  desplazar e ir al estado 43

    $default  reduce usando la regla 17 (expr)


Estado 51

   17 expr: expr • '+' expr
   18     | expr • '*' expr
   18     | expr '*' expr •
   19     | expr • TMENOS expr

    $default  reduce usando la regla 18 (expr)


Estado 52

   11 asignacion: type ID ASIGNACION exprBool ';' •

    $default  reduce usando la regla 11 (asignacion)
